[metadata]
name = kwess
version = 0.0.3
author = Issa Lompo
author_email = kaiyoux@gmail.com
maintainer = Issa Lompo
maintainer_email = kaiyoux@gmail.com
description = Questrade API wrapper.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaiyoux/kwess
keywords = Questrade, api, REST, wrapper
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE.txt
project_urls =
    Bug Tracker = https://github.com/kaiyoux/kwess/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
zip_safe = True
include_package_data = True
install_requires =
	requests>=2.28.1


[options.package_data]
sample_configs = *.txt
* = *.txt, *.md
